--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.5.2",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
