--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@mui/styles": "^6.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.1",
@@ -18,9 +23,11 @@
     "flowbite": "^2.5.2",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
+    "peerjs": "^1.5.4",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
@@ -28,9 +35,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
