--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-mentions": "^4.4.10",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
