--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "flowbite": "^2.5.2",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
     "peerjs": "^1.5.4",
     "quill": "^2.0.3",
+    "rc-mentions": "^2.19.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
